wp-content/themes/tomdallimore/assets/src/sass/application.scss
/* ... */
@media only screen and (max-width: 825px) {
  body {
    .rsContent .infoBlock img {
      margin-top: 36%;
    }
    .rsContent .infoBlock .textContent {
      margin-top: 36%;
    }
  }
}
/* ============================= */
/* ! Layout for mobile version   */
/* ============================= */

@media handheld, only screen and (max-width: 767px) {
  body {
    line-height: 1.8em !important;
    .sidebar_content {
      display:none;
    }
    #development_timer {
      display: none;
    }
    header {
      .container {
        .row {
          nav {
            margin-top:24px;
          }
          .fourcol:first-child {
            float:left;
          }
        }
      }
    }
    #home {
      .row:first-child .fourcol div {
        margin:40px auto 0;
      }
      .sixcol {
        height:100% !important;
          &:first-child {
            .hori_divider {
              border-bottom: 1px solid #333333;
            }
            .divider {
              display: none;
            }
          }
          &:last-child {
            .hori_divider {
              border-top: 1px solid #1C1D21;
            }
            li {
              margin-bottom: 10px !important;
            }
          }
      }
      .row:nth-child(2) {
        span {
          position:relative !important;
          width:100% !important;
        }
        .fourcol:last-child span {
          left:0%;
        }
        .fourcol:nth-child(2) {
          height:40px;
            h1 {
              margin:5px 0 8px;
            }
        }
      }
      .row:nth-child(3) {
        .fourcol {
          &:first-child {
              .recent {
                margin-top:11px;
              }
          }
          &:nth-child(2) {
              .recent {
                margin-top:25px;
              }
          }
          &:last-child {
              .recent {
                margin-top: 25px;
              }
          }
        }
      }
    }
    #about_focus {
      img {
        display:none;
      }
      .row {
        padding:40px 0 80px;
      }
      span {
        margin:2px 15px 0 0;
      }
    }
    #about {
      form {
        textarea, input {
          width:97%;
        }
        .sixcol, .twelvecol {
          padding-left:0px;
        }
        input[type="submit"] {
          margin:20px 3% 0 0;
        }
      }
    }
    #blog {
      .row {
        .type_header {
          width:89%;
        }
        .ninecol {
          float:none;
            .tencol h1 {
              width:100%;
            }
        }
      }
      .comments {
        .comment-meta {
          width:100%;
          margin:25px 0 30px;
        }
        i {
          &.icon-caret-left {
            display: none;
          }
          &.icon-caret-up {
            top: -23px;
            left: 48.3%;
            font-size: 35px;
            display: block;
          }
        }
      }
      section[role=navigation] .tencol .pre_nex {
        a {
          padding-left:0px !important;
          padding-right:0px !important;
        }
      }
    }
    footer {
      .container .row:last-child {
        .twelvecol {
          overflow:hidden;
          padding:0;
        }
      }
    }
    .hori_divider {
      display:block;
    }
    .rsContent {
      .infoBlock {
        .textContent {
          width:100%;
          text-align: center;
          margin-left: 0;
          margin-top: 8%;
          position: relative;
          float:none;
            p, span {
              display: none;
            }
            h2 {
              text-indent: 0;
              font-size: 1.3em;
            }
        }
        img {
          margin:5% auto 0 auto;
          height:275px;
          width:275px;
          display:block;
        }
      }
    }
    #photography {
      .row .tencol img {
          margin:30px 0;
          &:first-child {
              margin-top:0px;
          }
          &:last-child {
              margin-bottom: 0px;
          }
      }
    }
  }
}
@media handheld, only screen and (max-width: 430px) {
  body {
    line-height: 1.5em !important;
    header {
      h1 {
        font-size: 1.3em !important;
      }
      nav ul li {
        font-size: 20px;
      }
    }
    footer {
      .container {
        .row:last-child {
          .twelvecol {
            padding:0;
            font-size: 0.7em;
          }
        }
        p:last-child { 
          float:none !important;
        }
      }
    }
    #blog {
      .row {
        .type_header {
          width:88%;
        }
      }
    }
    .royalSlider {
      height:420px !important;
        .rsOverflow {
          height:420px !important;
            .rsContent {
              div {
                margin-top: 4%;
                  h2 {
                    font-size: 1.2em;
                  }
                  img {
                    margin:8% auto 0 auto;
                    height:250px;
                    width:250px;
                  }
              }
            }
        }
    }
    #photography {
      .row .tencol img {
          margin:30px 0;
          &:first-child {
              margin-top:0px;
          }
          &:last-child {
              margin-bottom: 0px;
          }
      }
    }
  }
}
/* ... */

